--- a/test0/gui.ui
+++ b/test0/gui.ui
@@ -263,20 +263,29 @@
       <height>91</height>
      </rect>
     </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
     <property name="lineWidth">
-     <number>-4</number>
+     <number>1</number>
     </property>
     <property name="verticalScrollBarPolicy">
      <enum>Qt::ScrollBarAlwaysOn</enum>
     </property>
     <property name="sizeAdjustPolicy">
-     <enum>QAbstractScrollArea::AdjustToContents</enum>
+     <enum>QAbstractScrollArea::AdjustIgnored</enum>
     </property>
     <property name="documentTitle">
      <string>Log</string>
     </property>
     <property name="readOnly">
      <bool>true</bool>
+    </property>
+    <property name="tabStopDistance">
+     <double>188.000000000000000</double>
     </property>
    </widget>
   </widget>
