add button to toggle blue LED

--- a/test0/gui.ui
+++ b/test0/gui.ui
@@ -288,6 +288,19 @@
      <double>188.000000000000000</double>
     </property>
    </widget>
+   <widget class="QToolButton" name="toolButton">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>100</y>
+      <width>91</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Turn on Blue LED</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actiontessie">
