--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -47,8 +47,17 @@
      </item>
      <item row="1" column="0">
       <widget class="QCheckBox" name="checkBoxTEC0">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="mouseTracking">
+        <bool>true</bool>
+       </property>
        <property name="text">
         <string>TEC 0</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
@@ -90,6 +99,9 @@
       <width>481</width>
       <height>141</height>
      </rect>
+    </property>
+    <property name="mouseTracking">
+     <bool>true</bool>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
