--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -162,7 +162,7 @@
       <rect>
        <x>300</x>
        <y>50</y>
-       <width>110</width>
+       <width>71</width>
        <height>20</height>
       </rect>
      </property>
@@ -175,7 +175,7 @@
       <rect>
        <x>220</x>
        <y>50</y>
-       <width>165</width>
+       <width>61</width>
        <height>20</height>
       </rect>
      </property>
@@ -188,8 +188,8 @@
       <rect>
        <x>140</x>
        <y>50</y>
-       <width>331</width>
-       <height>20</height>
+       <width>71</width>
+       <height>16</height>
       </rect>
      </property>
      <property name="text">
@@ -203,7 +203,7 @@
       <x>399</x>
       <y>70</y>
       <width>260</width>
-      <height>54</height>
+      <height>66</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="layoutValves">
@@ -261,6 +261,248 @@
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <tabstops>
+  <tabstop>checkBoxTEC0</tabstop>
+  <tabstop>checkBoxTEC1</tabstop>
+  <tabstop>checkBoxTEC2</tabstop>
+  <tabstop>checkBoxTEC3</tabstop>
+  <tabstop>checkBoxTEC4</tabstop>
+  <tabstop>checkBoxTEC5</tabstop>
+  <tabstop>checkBoxTEC6</tabstop>
+  <tabstop>checkBoxTEC7</tabstop>
+  <tabstop>checkboxTECLockAll</tabstop>
+  <tabstop>sliderTECTemperature</tabstop>
+  <tabstop>textTECTemperature</tabstop>
+  <tabstop>buttonValve0</tabstop>
+  <tabstop>buttonValve1</tabstop>
+  <tabstop>buttonValveAll</tabstop>
+  <tabstop>buttonQuit</tabstop>
+  <tabstop>textEditLog</tabstop>
+ </tabstops>
  <resources/>
- <connections/>
+ <connections>
+  <connection>
+   <sender>checkBoxTEC0</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkTEC0(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>418</x>
+     <y>261</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>423</x>
+     <y>320</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonQuit</sender>
+   <signal>clicked()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>quitProgram()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>121</x>
+     <y>71</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>129</x>
+     <y>124</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkboxTECLockAll</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkTECAll(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>321</x>
+     <y>209</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>324</x>
+     <y>304</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBoxTEC1</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkTEC1(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>521</x>
+     <y>268</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>546</x>
+     <y>306</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBoxTEC2</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkTEC2(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>601</x>
+     <y>256</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>611</x>
+     <y>318</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBoxTEC3</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkTEC3(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>674</x>
+     <y>264</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>676</x>
+     <y>328</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBoxTEC7</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkTEC7(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>447</x>
+     <y>206</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>468</x>
+     <y>121</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBoxTEC4</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkTEC4(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>701</x>
+     <y>211</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>739</x>
+     <y>116</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBoxTEC5</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkTEC5(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>581</x>
+     <y>208</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>672</x>
+     <y>124</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>checkBoxTEC6</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkTEC6(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>500</x>
+     <y>212</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>524</x>
+     <y>137</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonValve0</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkValve0(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>429</x>
+     <y>96</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>446</x>
+     <y>43</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonValve1</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkValve1(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>513</x>
+     <y>104</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>531</x>
+     <y>57</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>buttonValveAll</sender>
+   <signal>clicked(bool)</signal>
+   <receiver>MainWindow</receiver>
+   <slot>checkValveAll(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>590</x>
+     <y>103</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>613</x>
+     <y>71</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
+ <slots>
+  <slot>checkTEC0(bool)</slot>
+  <slot>quitProgram()</slot>
+  <slot>checkTECAll(bool)</slot>
+  <slot>checkTEC1(bool)</slot>
+  <slot>checkTEC2(bool)</slot>
+  <slot>checkTEC3(bool)</slot>
+  <slot>checkTEC4(bool)</slot>
+  <slot>checkTEC5(bool)</slot>
+  <slot>checkTEC6(bool)</slot>
+  <slot>checkTEC7(bool)</slot>
+  <slot>checkValve0(bool)</slot>
+  <slot>checkValve1(bool)</slot>
+  <slot>checkValveAll(bool)</slot>
+ </slots>
 </ui>
