--- a/test1/MainWindow.ui
+++ b/test1/MainWindow.ui
@@ -20,10 +20,10 @@
    <widget class="QFrame" name="frameTECController">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>150</y>
-      <width>481</width>
-      <height>141</height>
+      <x>140</x>
+      <y>100</y>
+      <width>621</width>
+      <height>461</height>
      </rect>
     </property>
     <property name="mouseTracking">
@@ -51,19 +51,6 @@
      </property>
      <property name="text">
       <string>TEC controller</string>
-     </property>
-    </widget>
-    <widget class="QSlider" name="sliderTECParameter">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>80</y>
-       <width>81</width>
-       <height>25</height>
-      </rect>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
     <widget class="QTextEdit" name="textTECParameter">
@@ -200,44 +187,11 @@
      </property>
     </widget>
    </widget>
-   <widget class="QWidget" name="horizontalLayoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>399</x>
-      <y>70</y>
-      <width>260</width>
-      <height>66</height>
-     </rect>
-    </property>
-    <layout class="QGridLayout" name="layoutValves">
-     <item row="0" column="1">
-      <widget class="QPushButton" name="buttonValve1">
-       <property name="text">
-        <string>valve 1</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="2">
-      <widget class="QPushButton" name="buttonValveAll">
-       <property name="text">
-        <string>all valves</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QPushButton" name="buttonValve0">
-       <property name="text">
-        <string>valve 0</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
    <widget class="QToolButton" name="buttonQuit">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>100</y>
+      <x>30</x>
+      <y>80</y>
       <width>81</width>
       <height>22</height>
      </rect>
@@ -255,17 +209,17 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>350</y>
+      <y>20</y>
       <width>441</width>
-      <height>121</height>
+      <height>71</height>
      </rect>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>40</y>
+      <x>20</x>
+      <y>20</y>
       <width>100</width>
       <height>32</height>
      </rect>
@@ -273,6 +227,39 @@
     <property name="text">
      <string>Start</string>
     </property>
+   </widget>
+   <widget class="QWidget" name="verticalLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>120</y>
+      <width>101</width>
+      <height>100</height>
+     </rect>
+    </property>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <item>
+      <widget class="QPushButton" name="buttonValve0">
+       <property name="text">
+        <string>valve 0</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="buttonValve1">
+       <property name="text">
+        <string>valve 1</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="buttonValveAll">
+       <property name="text">
+        <string>all valves</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -287,11 +274,7 @@
   <tabstop>checkBoxTEC6</tabstop>
   <tabstop>checkBoxTEC7</tabstop>
   <tabstop>checkboxTECLockAll</tabstop>
-  <tabstop>sliderTECParameter</tabstop>
   <tabstop>textTECParameter</tabstop>
-  <tabstop>buttonValve0</tabstop>
-  <tabstop>buttonValve1</tabstop>
-  <tabstop>buttonValveAll</tabstop>
   <tabstop>buttonQuit</tabstop>
   <tabstop>textEditLog</tabstop>
  </tabstops>
